[metadata]
name = napari-karyotype
version = 0.0.2
author = Alexandr Dibrov
author_email = dibrov@mpi-cbg.de

license = BSD-3-Clause
description = A plugin to evaluate the relative chromosome sizes from karyotype images.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License


[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    napari[all]
    scikit-image
    pandas
    pulp
    pyqtgraph

[options.entry_points]
napari.plugin = 
    napari-karyotype = napari_karyotype

console_scripts =
    karyotype-analysis-plots = napari_karyotype.analysis_plots.__main__:main
