[metadata]
name = napari-kics
version = attr: napari_kics.__version__
author = Alexandr Dibrov
author_email = dibrov@mpi-cbg.de

license = BSD-3-Clause
description = A plugin to estimate chromosome sizes from karyotype images.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License


[options]
packages = find:
include_package_data = True
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    napari[all]
    scikit-image
    pandas
    pulp
    pyqtgraph

[options.packages.find]
include = napari_kics.*

[options.package_data]
* = resources/artwork/logo.svg, resources/data/mHomSap_male.fasta.fai, resources/data/mHomSap_male.jpeg

[options.entry_points]
napari.plugin = 
    napari-kics = napari_kics

console_scripts =
    karyotype-analysis-plots = napari_kics.analysis_plots.__main__:main

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
ignore =
    # W503 line break before binary operator (contradicts with black)
    # E203 whitespace before ‘,’, ‘;’, or ‘:’ (contradicts with black)
    W503,E203
exclude = .git,__pycache__,dist,docs
per-file-ignores =
    # F401 imported but unused (imports are just forwarded)
    # F403 unable to detect undefined names (init files should not require this check)
    __init__.py: F401,F403

    # F405 may be undefined (there is some magic happening that's breaking things; just ignore it)
    # F821 undefined name (injecting globals into functions break this check)
    workflow.py: F405,F821
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[tool:pytest]
testpaths=tests
python_files = test_*.py
